--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
@@ -15,6 +17,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.15.1",
     "router": "^1.3.8",
+    "typescript": "^5.7.3",
     "vitals": "^0.1.2",
     "web": "^0.0.2",
     "web-vitals": "^4.2.4"
