--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^6.4.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
